fix doc bug
